parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ADD
    ALIAS
    AMPERSAND
    AMPERSAND_ASSIGN
    ARROW
    AS
    ASCENDING
    ASYNC
    AWAIT
    BASE
    BREAK
    BY
    BYTE
    CAPACITY
    CARET
    CARET_ASSIGN
    CASE
    CATCH
    CHECKED
    CLASS_NAME
    CLEAR
    COLON
    CONST
    CONTAINS
    CONTINUE
    COUNT
    DECIMAL
    DEFAULT
    DELEGATE
    DESCENDING
    DIVIDE_ASSIGN
    DO
    DOUBLE_COLON
    DOUBLE_QUESTION
    DYNAMIC
    ENUM
    EQUALS
    EVENT
    EXPLICIT
    EXTERN
    FINALLY
    FIXED
    FROM
    GLOBAL
    GOTO
    GROUP
    IMPLICIT
    INDEXOF
    INSERT
    INTERFACE
    INTO
    IS
    JOIN
    LAMBDA_ARROW
    LEFT_SHIFT
    LEFT_SHIFT_ASSIGN
    LET
    LOCK
    LONG
    MINUS_ASSIGN
    MULTIPLY_ASSIGN
    NAMEOF
    NAMESPACE
    NOTNULL
    NULLABLE_OPERATOR
    OBJECT
    ON
    OPERATOR
    ORDERBY
    OUT
    OVERRIDE
    PARAMS
    PARTIAL
    PERCENT_ASSIGN
    PIPE
    PIPE_ASSIGN
    PLUS_ASSIGN
    QUESTION
    READONLY
    REF
    REMOVE
    REMOVEAT
    RIGHT_SHIFT
    RIGHT_SHIFT_ASSIGN
    SBYTE
    SEALED
    SELECT
    SHORT
    SIZEOF
    STACKALLOC
    STRUCT
    SWITCH
    THIS
    THROW
    TILDE
    TRY
    TYPEOF
    UINT
    ULONG
    UNCHECKED
    UNMANAGED
    UNSAFE
    USHORT
    VALUE
    VERBATIM_STRING
    VIRTUAL
    VOLATILE
    WHEN
    WHERE
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> using_statements class_declarations
Rule 2     using_statements -> using_statements using_statement
Rule 3     using_statements -> using_statement
Rule 4     using_statements -> empty
Rule 5     using_statement -> USING IDENTIFIER SEMICOLON
Rule 6     using_statement -> USING IDENTIFIER DOT IDENTIFIER SEMICOLON
Rule 7     class_declarations -> class_declarations class_declaration
Rule 8     class_declarations -> class_declaration
Rule 9     class_declaration -> access_modifier CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
Rule 10    class_declaration -> CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
Rule 11    access_modifier -> PUBLIC
Rule 12    access_modifier -> PRIVATE
Rule 13    access_modifier -> PROTECTED
Rule 14    access_modifier -> INTERNAL
Rule 15    class_body -> class_body class_member
Rule 16    class_body -> class_member
Rule 17    class_body -> empty
Rule 18    class_member -> field_declaration
Rule 19    class_member -> method_declaration
Rule 20    class_member -> property_declaration
Rule 21    property_declaration -> access_modifier type_specifier IDENTIFIER OPEN_BRACE property_accessors CLOSE_BRACE
Rule 22    property_accessors -> GET SEMICOLON SET SEMICOLON
Rule 23    property_accessors -> GET SEMICOLON
Rule 24    property_accessors -> SET SEMICOLON
Rule 25    field_declaration -> access_modifier type_specifier IDENTIFIER SEMICOLON
Rule 26    field_declaration -> access_modifier type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 27    field_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 28    field_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 29    method_declaration -> access_modifier STATIC type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
Rule 30    method_declaration -> access_modifier type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
Rule 31    method_declaration -> STATIC type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
Rule 32    parameter_list -> parameter_list COMMA parameter
Rule 33    parameter_list -> parameter
Rule 34    parameter_list -> empty
Rule 35    parameter -> type_specifier IDENTIFIER
Rule 36    type_specifier -> INT_TYPE
Rule 37    type_specifier -> FLOAT_TYPE
Rule 38    type_specifier -> DOUBLE
Rule 39    type_specifier -> STRING_TYPE
Rule 40    type_specifier -> BOOL_TYPE
Rule 41    type_specifier -> CHAR
Rule 42    type_specifier -> VOID
Rule 43    type_specifier -> IDENTIFIER
Rule 44    type_specifier -> array_type
Rule 45    type_specifier -> generic_type
Rule 46    array_type -> type_specifier OPEN_BRACKET CLOSE_BRACKET
Rule 47    generic_type -> LIST LESS_THAN type_specifier GREATER_THAN
Rule 48    generic_type -> DICTIONARY LESS_THAN type_specifier COMMA type_specifier GREATER_THAN
Rule 49    statement_list -> statement_list statement
Rule 50    statement_list -> statement
Rule 51    statement_list -> empty
Rule 52    statement -> expression_statement
Rule 53    statement -> declaration_statement
Rule 54    statement -> assignment_statement
Rule 55    statement -> if_statement
Rule 56    statement -> while_statement
Rule 57    statement -> for_statement
Rule 58    statement -> foreach_statement
Rule 59    statement -> return_statement
Rule 60    statement -> block_statement
Rule 61    statement -> print_statement
Rule 62    statement -> input_statement
Rule 63    block_statement -> OPEN_BRACE statement_list CLOSE_BRACE
Rule 64    expression_statement -> expression SEMICOLON
Rule 65    declaration_statement -> type_specifier variable_declarator_list SEMICOLON
Rule 66    declaration_statement -> VAR IDENTIFIER ASSIGN expression SEMICOLON
Rule 67    variable_declarator_list -> variable_declarator_list COMMA variable_declarator
Rule 68    variable_declarator_list -> variable_declarator
Rule 69    variable_declarator -> IDENTIFIER
Rule 70    variable_declarator -> IDENTIFIER ASSIGN expression
Rule 71    assignment_statement -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 72    assignment_statement -> IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET ASSIGN expression SEMICOLON
Rule 73    assignment_statement -> IDENTIFIER DOT IDENTIFIER ASSIGN expression SEMICOLON
Rule 74    if_statement -> IF OPEN_PAREN boolean_expression CLOSE_PAREN statement
Rule 75    if_statement -> IF OPEN_PAREN boolean_expression CLOSE_PAREN statement ELSE statement
Rule 76    while_statement -> WHILE OPEN_PAREN boolean_expression CLOSE_PAREN statement
Rule 77    for_statement -> FOR OPEN_PAREN for_init SEMICOLON boolean_expression SEMICOLON for_update CLOSE_PAREN statement
Rule 78    for_init -> type_specifier IDENTIFIER ASSIGN expression
Rule 79    for_init -> assignment_statement
Rule 80    for_init -> empty
Rule 81    for_update -> assignment_statement
Rule 82    for_update -> IDENTIFIER INCREMENT
Rule 83    for_update -> IDENTIFIER DECREMENT
Rule 84    for_update -> empty
Rule 85    foreach_statement -> FOREACH OPEN_PAREN type_specifier IDENTIFIER IN expression CLOSE_PAREN statement
Rule 86    return_statement -> RETURN expression SEMICOLON
Rule 87    return_statement -> RETURN SEMICOLON
Rule 88    print_statement -> CONSOLE DOT WRITELINE OPEN_PAREN expression CLOSE_PAREN SEMICOLON
Rule 89    print_statement -> CONSOLE DOT WRITE OPEN_PAREN expression CLOSE_PAREN SEMICOLON
Rule 90    print_statement -> CONSOLE DOT WRITELINE OPEN_PAREN CLOSE_PAREN SEMICOLON
Rule 91    input_statement -> CONSOLE DOT READLINE OPEN_PAREN CLOSE_PAREN
Rule 92    input_statement -> CONVERT DOT TOINT32 OPEN_PAREN CONSOLE DOT READLINE OPEN_PAREN CLOSE_PAREN CLOSE_PAREN
Rule 93    expression -> primary_expression
Rule 94    expression -> arithmetic_expression
Rule 95    expression -> boolean_expression
Rule 96    primary_expression -> literal
Rule 97    primary_expression -> IDENTIFIER
Rule 98    primary_expression -> function_call
Rule 99    primary_expression -> array_access
Rule 100   primary_expression -> member_access
Rule 101   primary_expression -> array_initialization
Rule 102   primary_expression -> input_statement
Rule 103   primary_expression -> TRUE
Rule 104   primary_expression -> FALSE
Rule 105   primary_expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 106   arithmetic_expression -> expression PLUS expression
Rule 107   arithmetic_expression -> expression MINUS expression
Rule 108   arithmetic_expression -> expression MULTIPLY expression
Rule 109   arithmetic_expression -> expression DIVIDE expression
Rule 110   arithmetic_expression -> expression PERCENT expression
Rule 111   arithmetic_expression -> MINUS expression
Rule 112   boolean_expression -> expression EQUAL expression
Rule 113   boolean_expression -> expression NOT_EQUAL expression
Rule 114   boolean_expression -> expression LESS_THAN expression
Rule 115   boolean_expression -> expression GREATER_THAN expression
Rule 116   boolean_expression -> expression LESS_THAN_EQUAL expression
Rule 117   boolean_expression -> expression GREATER_THAN_EQUAL expression
Rule 118   boolean_expression -> boolean_expression DOUBLE_AMPERSAND boolean_expression
Rule 119   boolean_expression -> boolean_expression DOUBLE_PIPE boolean_expression
Rule 120   boolean_expression -> BANG boolean_expression
Rule 121   array_initialization -> OPEN_BRACE expression_list CLOSE_BRACE
Rule 122   array_initialization -> NEW type_specifier OPEN_BRACKET expression CLOSE_BRACKET
Rule 123   array_initialization -> NEW LIST LESS_THAN type_specifier GREATER_THAN OPEN_PAREN CLOSE_PAREN
Rule 124   array_initialization -> NEW LIST LESS_THAN type_specifier GREATER_THAN OPEN_BRACE expression_list CLOSE_BRACE
Rule 125   array_access -> IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET
Rule 126   member_access -> IDENTIFIER DOT IDENTIFIER
Rule 127   function_call -> IDENTIFIER OPEN_PAREN argument_list CLOSE_PAREN
Rule 128   argument_list -> argument_list COMMA expression
Rule 129   argument_list -> expression
Rule 130   argument_list -> empty
Rule 131   expression_list -> expression_list COMMA expression
Rule 132   expression_list -> expression
Rule 133   expression_list -> empty
Rule 134   dictionary_initializer_list -> dictionary_initializer_list COMMA dictionary_initializer
Rule 135   dictionary_initializer_list -> dictionary_initializer
Rule 136   dictionary_initializer_list -> empty
Rule 137   dictionary_initializer -> OPEN_BRACE expression COMMA expression CLOSE_BRACE
Rule 138   literal -> INTEGER
Rule 139   literal -> FLOAT
Rule 140   literal -> STRING
Rule 141   literal -> CHAR_LITERAL
Rule 142   literal -> NULL
Rule 143   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ADD                  : 
ALIAS                : 
AMPERSAND            : 
AMPERSAND_ASSIGN     : 
ARROW                : 
AS                   : 
ASCENDING            : 
ASSIGN               : 26 28 66 70 71 72 73 78
ASYNC                : 
AWAIT                : 
BANG                 : 120
BASE                 : 
BOOL_TYPE            : 40
BREAK                : 
BY                   : 
BYTE                 : 
CAPACITY             : 
CARET                : 
CARET_ASSIGN         : 
CASE                 : 
CATCH                : 
CHAR                 : 41
CHAR_LITERAL         : 141
CHECKED              : 
CLASS                : 9 10
CLASS_NAME           : 
CLEAR                : 
CLOSE_BRACE          : 9 10 21 29 30 31 63 121 124 137
CLOSE_BRACKET        : 46 72 122 125
CLOSE_PAREN          : 29 30 31 74 75 76 77 85 88 89 90 91 92 92 105 123 127
COLON                : 
COMMA                : 32 48 67 128 131 134 137
CONSOLE              : 88 89 90 91 92
CONST                : 
CONTAINS             : 
CONTINUE             : 
CONVERT              : 92
COUNT                : 
DECIMAL              : 
DECREMENT            : 83
DEFAULT              : 
DELEGATE             : 
DESCENDING           : 
DICTIONARY           : 48
DIVIDE               : 109
DIVIDE_ASSIGN        : 
DO                   : 
DOT                  : 6 73 88 89 90 91 92 92 126
DOUBLE               : 38
DOUBLE_AMPERSAND     : 118
DOUBLE_COLON         : 
DOUBLE_PIPE          : 119
DOUBLE_QUESTION      : 
DYNAMIC              : 
ELSE                 : 75
ENUM                 : 
EQUAL                : 112
EQUALS               : 
EVENT                : 
EXPLICIT             : 
EXTERN               : 
FALSE                : 104
FINALLY              : 
FIXED                : 
FLOAT                : 139
FLOAT_TYPE           : 37
FOR                  : 77
FOREACH              : 85
FROM                 : 
GET                  : 22 23
GLOBAL               : 
GOTO                 : 
GREATER_THAN         : 47 48 115 123 124
GREATER_THAN_EQUAL   : 117
GROUP                : 
IDENTIFIER           : 5 6 6 9 10 21 25 26 27 28 29 30 31 35 43 66 69 70 71 72 73 73 78 82 83 85 97 125 126 126 127
IF                   : 74 75
IMPLICIT             : 
IN                   : 85
INCREMENT            : 82
INDEXOF              : 
INSERT               : 
INTEGER              : 138
INTERFACE            : 
INTERNAL             : 14
INTO                 : 
INT_TYPE             : 36
IS                   : 
JOIN                 : 
LAMBDA_ARROW         : 
LEFT_SHIFT           : 
LEFT_SHIFT_ASSIGN    : 
LESS_THAN            : 47 48 114 123 124
LESS_THAN_EQUAL      : 116
LET                  : 
LIST                 : 47 123 124
LOCK                 : 
LONG                 : 
MINUS                : 107 111
MINUS_ASSIGN         : 
MULTIPLY             : 108
MULTIPLY_ASSIGN      : 
NAMEOF               : 
NAMESPACE            : 
NEW                  : 122 123 124
NOTNULL              : 
NOT_EQUAL            : 113
NULL                 : 142
NULLABLE_OPERATOR    : 
OBJECT               : 
ON                   : 
OPEN_BRACE           : 9 10 21 29 30 31 63 121 124 137
OPEN_BRACKET         : 46 72 122 125
OPEN_PAREN           : 29 30 31 74 75 76 77 85 88 89 90 91 92 92 105 123 127
OPERATOR             : 
ORDERBY              : 
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PARTIAL              : 
PERCENT              : 110
PERCENT_ASSIGN       : 
PIPE                 : 
PIPE_ASSIGN          : 
PLUS                 : 106
PLUS_ASSIGN          : 
PRIVATE              : 12
PROTECTED            : 13
PUBLIC               : 11
QUESTION             : 
READLINE             : 91 92
READONLY             : 
REF                  : 
REMOVE               : 
REMOVEAT             : 
RETURN               : 86 87
RIGHT_SHIFT          : 
RIGHT_SHIFT_ASSIGN   : 
SBYTE                : 
SEALED               : 
SELECT               : 
SEMICOLON            : 5 6 22 22 23 24 25 26 27 28 64 65 66 71 72 73 77 77 86 87 88 89 90
SET                  : 22 24
SHORT                : 
SIZEOF               : 
STACKALLOC           : 
STATIC               : 29 31
STRING               : 140
STRING_TYPE          : 39
STRUCT               : 
SWITCH               : 
THIS                 : 
THROW                : 
TILDE                : 
TOINT32              : 92
TRUE                 : 103
TRY                  : 
TYPEOF               : 
UINT                 : 
ULONG                : 
UNCHECKED            : 
UNMANAGED            : 
UNSAFE               : 
USHORT               : 
USING                : 5 6
VALUE                : 
VAR                  : 66
VERBATIM_STRING      : 
VIRTUAL              : 
VOID                 : 42
VOLATILE             : 
WHEN                 : 
WHERE                : 
WHILE                : 76
WRITE                : 89
WRITELINE            : 88 90
YIELD                : 
error                : 

Nonterminals, with rules where they appear

access_modifier      : 9 21 25 26 29 30
argument_list        : 127 128
arithmetic_expression : 94
array_access         : 99
array_initialization : 101
array_type           : 44
assignment_statement : 54 79 81
block_statement      : 60
boolean_expression   : 74 75 76 77 95 118 118 119 119 120
class_body           : 9 10 15
class_declaration    : 7 8
class_declarations   : 1 7
class_member         : 15 16
declaration_statement : 53
dictionary_initializer : 134 135
dictionary_initializer_list : 134
empty                : 4 17 34 51 80 84 130 133 136
expression           : 26 28 64 66 70 71 72 72 73 78 85 86 88 89 105 106 106 107 107 108 108 109 109 110 110 111 112 112 113 113 114 114 115 115 116 116 117 117 122 125 128 129 131 132 137 137
expression_list      : 121 124 131
expression_statement : 52
field_declaration    : 18
for_init             : 77
for_statement        : 57
for_update           : 77
foreach_statement    : 58
function_call        : 98
generic_type         : 45
if_statement         : 55
input_statement      : 62 102
literal              : 96
member_access        : 100
method_declaration   : 19
parameter            : 32 33
parameter_list       : 29 30 31 32
primary_expression   : 93
print_statement      : 61
program              : 0
property_accessors   : 21
property_declaration : 20
return_statement     : 59
statement            : 49 50 74 75 75 76 77 85
statement_list       : 29 30 31 49 63
type_specifier       : 21 25 26 27 28 29 30 31 35 46 47 48 48 65 78 85 122 123 124
using_statement      : 2 3
using_statements     : 1 2
variable_declarator  : 67 68
variable_declarator_list : 65 67
while_statement      : 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . using_statements class_declarations
    (2) using_statements -> . using_statements using_statement
    (3) using_statements -> . using_statement
    (4) using_statements -> . empty
    (5) using_statement -> . USING IDENTIFIER SEMICOLON
    (6) using_statement -> . USING IDENTIFIER DOT IDENTIFIER SEMICOLON
    (143) empty -> .

  ! shift/reduce conflict for USING resolved as shift
    USING           shift and go to state 5
    CLASS           reduce using rule 143 (empty -> .)
    PUBLIC          reduce using rule 143 (empty -> .)
    PRIVATE         reduce using rule 143 (empty -> .)
    PROTECTED       reduce using rule 143 (empty -> .)
    INTERNAL        reduce using rule 143 (empty -> .)

  ! USING           [ reduce using rule 143 (empty -> .) ]

    program                        shift and go to state 1
    using_statements               shift and go to state 2
    using_statement                shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> using_statements . class_declarations
    (2) using_statements -> using_statements . using_statement
    (7) class_declarations -> . class_declarations class_declaration
    (8) class_declarations -> . class_declaration
    (5) using_statement -> . USING IDENTIFIER SEMICOLON
    (6) using_statement -> . USING IDENTIFIER DOT IDENTIFIER SEMICOLON
    (9) class_declaration -> . access_modifier CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
    (10) class_declaration -> . CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
    (11) access_modifier -> . PUBLIC
    (12) access_modifier -> . PRIVATE
    (13) access_modifier -> . PROTECTED
    (14) access_modifier -> . INTERNAL

    USING           shift and go to state 5
    CLASS           shift and go to state 10
    PUBLIC          shift and go to state 11
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 13
    INTERNAL        shift and go to state 14

    class_declarations             shift and go to state 6
    using_statement                shift and go to state 7
    class_declaration              shift and go to state 8
    access_modifier                shift and go to state 9

state 3

    (3) using_statements -> using_statement .

    USING           reduce using rule 3 (using_statements -> using_statement .)
    CLASS           reduce using rule 3 (using_statements -> using_statement .)
    PUBLIC          reduce using rule 3 (using_statements -> using_statement .)
    PRIVATE         reduce using rule 3 (using_statements -> using_statement .)
    PROTECTED       reduce using rule 3 (using_statements -> using_statement .)
    INTERNAL        reduce using rule 3 (using_statements -> using_statement .)


state 4

    (4) using_statements -> empty .

    USING           reduce using rule 4 (using_statements -> empty .)
    CLASS           reduce using rule 4 (using_statements -> empty .)
    PUBLIC          reduce using rule 4 (using_statements -> empty .)
    PRIVATE         reduce using rule 4 (using_statements -> empty .)
    PROTECTED       reduce using rule 4 (using_statements -> empty .)
    INTERNAL        reduce using rule 4 (using_statements -> empty .)


state 5

    (5) using_statement -> USING . IDENTIFIER SEMICOLON
    (6) using_statement -> USING . IDENTIFIER DOT IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 15


state 6

    (1) program -> using_statements class_declarations .
    (7) class_declarations -> class_declarations . class_declaration
    (9) class_declaration -> . access_modifier CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
    (10) class_declaration -> . CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE
    (11) access_modifier -> . PUBLIC
    (12) access_modifier -> . PRIVATE
    (13) access_modifier -> . PROTECTED
    (14) access_modifier -> . INTERNAL

    $end            reduce using rule 1 (program -> using_statements class_declarations .)
    CLASS           shift and go to state 10
    PUBLIC          shift and go to state 11
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 13
    INTERNAL        shift and go to state 14

    class_declaration              shift and go to state 16
    access_modifier                shift and go to state 9

state 7

    (2) using_statements -> using_statements using_statement .

    USING           reduce using rule 2 (using_statements -> using_statements using_statement .)
    CLASS           reduce using rule 2 (using_statements -> using_statements using_statement .)
    PUBLIC          reduce using rule 2 (using_statements -> using_statements using_statement .)
    PRIVATE         reduce using rule 2 (using_statements -> using_statements using_statement .)
    PROTECTED       reduce using rule 2 (using_statements -> using_statements using_statement .)
    INTERNAL        reduce using rule 2 (using_statements -> using_statements using_statement .)


state 8

    (8) class_declarations -> class_declaration .

    CLASS           reduce using rule 8 (class_declarations -> class_declaration .)
    PUBLIC          reduce using rule 8 (class_declarations -> class_declaration .)
    PRIVATE         reduce using rule 8 (class_declarations -> class_declaration .)
    PROTECTED       reduce using rule 8 (class_declarations -> class_declaration .)
    INTERNAL        reduce using rule 8 (class_declarations -> class_declaration .)
    $end            reduce using rule 8 (class_declarations -> class_declaration .)


state 9

    (9) class_declaration -> access_modifier . CLASS IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE

    CLASS           shift and go to state 17


state 10

    (10) class_declaration -> CLASS . IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE

    IDENTIFIER      shift and go to state 18


state 11

    (11) access_modifier -> PUBLIC .

    CLASS           reduce using rule 11 (access_modifier -> PUBLIC .)
    STATIC          reduce using rule 11 (access_modifier -> PUBLIC .)
    INT_TYPE        reduce using rule 11 (access_modifier -> PUBLIC .)
    FLOAT_TYPE      reduce using rule 11 (access_modifier -> PUBLIC .)
    DOUBLE          reduce using rule 11 (access_modifier -> PUBLIC .)
    STRING_TYPE     reduce using rule 11 (access_modifier -> PUBLIC .)
    BOOL_TYPE       reduce using rule 11 (access_modifier -> PUBLIC .)
    CHAR            reduce using rule 11 (access_modifier -> PUBLIC .)
    VOID            reduce using rule 11 (access_modifier -> PUBLIC .)
    IDENTIFIER      reduce using rule 11 (access_modifier -> PUBLIC .)
    LIST            reduce using rule 11 (access_modifier -> PUBLIC .)
    DICTIONARY      reduce using rule 11 (access_modifier -> PUBLIC .)


state 12

    (12) access_modifier -> PRIVATE .

    CLASS           reduce using rule 12 (access_modifier -> PRIVATE .)
    STATIC          reduce using rule 12 (access_modifier -> PRIVATE .)
    INT_TYPE        reduce using rule 12 (access_modifier -> PRIVATE .)
    FLOAT_TYPE      reduce using rule 12 (access_modifier -> PRIVATE .)
    DOUBLE          reduce using rule 12 (access_modifier -> PRIVATE .)
    STRING_TYPE     reduce using rule 12 (access_modifier -> PRIVATE .)
    BOOL_TYPE       reduce using rule 12 (access_modifier -> PRIVATE .)
    CHAR            reduce using rule 12 (access_modifier -> PRIVATE .)
    VOID            reduce using rule 12 (access_modifier -> PRIVATE .)
    IDENTIFIER      reduce using rule 12 (access_modifier -> PRIVATE .)
    LIST            reduce using rule 12 (access_modifier -> PRIVATE .)
    DICTIONARY      reduce using rule 12 (access_modifier -> PRIVATE .)


state 13

    (13) access_modifier -> PROTECTED .

    CLASS           reduce using rule 13 (access_modifier -> PROTECTED .)
    STATIC          reduce using rule 13 (access_modifier -> PROTECTED .)
    INT_TYPE        reduce using rule 13 (access_modifier -> PROTECTED .)
    FLOAT_TYPE      reduce using rule 13 (access_modifier -> PROTECTED .)
    DOUBLE          reduce using rule 13 (access_modifier -> PROTECTED .)
    STRING_TYPE     reduce using rule 13 (access_modifier -> PROTECTED .)
    BOOL_TYPE       reduce using rule 13 (access_modifier -> PROTECTED .)
    CHAR            reduce using rule 13 (access_modifier -> PROTECTED .)
    VOID            reduce using rule 13 (access_modifier -> PROTECTED .)
    IDENTIFIER      reduce using rule 13 (access_modifier -> PROTECTED .)
    LIST            reduce using rule 13 (access_modifier -> PROTECTED .)
    DICTIONARY      reduce using rule 13 (access_modifier -> PROTECTED .)


state 14

    (14) access_modifier -> INTERNAL .

    CLASS           reduce using rule 14 (access_modifier -> INTERNAL .)
    STATIC          reduce using rule 14 (access_modifier -> INTERNAL .)
    INT_TYPE        reduce using rule 14 (access_modifier -> INTERNAL .)
    FLOAT_TYPE      reduce using rule 14 (access_modifier -> INTERNAL .)
    DOUBLE          reduce using rule 14 (access_modifier -> INTERNAL .)
    STRING_TYPE     reduce using rule 14 (access_modifier -> INTERNAL .)
    BOOL_TYPE       reduce using rule 14 (access_modifier -> INTERNAL .)
    CHAR            reduce using rule 14 (access_modifier -> INTERNAL .)
    VOID            reduce using rule 14 (access_modifier -> INTERNAL .)
    IDENTIFIER      reduce using rule 14 (access_modifier -> INTERNAL .)
    LIST            reduce using rule 14 (access_modifier -> INTERNAL .)
    DICTIONARY      reduce using rule 14 (access_modifier -> INTERNAL .)


state 15

    (5) using_statement -> USING IDENTIFIER . SEMICOLON
    (6) using_statement -> USING IDENTIFIER . DOT IDENTIFIER SEMICOLON

    SEMICOLON       shift and go to state 19
    DOT             shift and go to state 20


state 16

    (7) class_declarations -> class_declarations class_declaration .

    CLASS           reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PUBLIC          reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PRIVATE         reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    PROTECTED       reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    INTERNAL        reduce using rule 7 (class_declarations -> class_declarations class_declaration .)
    $end            reduce using rule 7 (class_declarations -> class_declarations class_declaration .)


state 17

    (9) class_declaration -> access_modifier CLASS . IDENTIFIER OPEN_BRACE class_body CLOSE_BRACE

    IDENTIFIER      shift and go to state 21


state 18

    (10) class_declaration -> CLASS IDENTIFIER . OPEN_BRACE class_body CLOSE_BRACE

    OPEN_BRACE      shift and go to state 22


state 19

    (5) using_statement -> USING IDENTIFIER SEMICOLON .

    USING           reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)
    CLASS           reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)
    PUBLIC          reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)
    PRIVATE         reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)
    PROTECTED       reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)
    INTERNAL        reduce using rule 5 (using_statement -> USING IDENTIFIER SEMICOLON .)


state 20

    (6) using_statement -> USING IDENTIFIER DOT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 23


state 21

    (9) class_declaration -> access_modifier CLASS IDENTIFIER . OPEN_BRACE class_body CLOSE_BRACE

    OPEN_BRACE      shift and go to state 24


state 22

    (10) class_declaration -> CLASS IDENTIFIER OPEN_BRACE . class_body CLOSE_BRACE
    (15) class_body -> . class_body class_member
    (16) class_body -> . class_member
    (17) class_body -> . empty
    (18) class_member -> . field_declaration
    (19) class_member -> . method_declaration
    (20) class_member -> . property_declaration
    (143) empty -> .
    (25) field_declaration -> . access_modifier type_specifier IDENTIFIER SEMICOLON
    (26) field_declaration -> . access_modifier type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (27) field_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (28) field_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (29) method_declaration -> . access_modifier STATIC type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
    (30) method_declaration -> . access_modifier type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
    (31) method_declaration -> . STATIC type_specifier IDENTIFIER OPEN_PAREN parameter_list CLOSE_PAREN OPEN_BRACE statement_list CLOSE_BRACE
    (21) property_declaration -> . access_modifier type_specifier IDENTIFIER OPEN_BRACE property_accessors CLOSE_BRACE
    (11) access_modifier -> . PUBLIC
    (12) access_modifier -> . PRIVATE
    (13) access_modifier -> . PROTECTED
    (14) access_modifier -> . INTERNAL
    (36) type_specifier -> . INT_TYPE
    (37) type_specifier -> . FLOAT_TYPE
    (38) type_specifier -> . DOUBLE
    (39) type_specifier -> . STRING_TYPE
    (40) type_specifier -> . BOOL_TYPE
    (41) type_specifier -> . CHAR
    (42) type_specifier -> . VOID
    (43) type_specifier -> . IDENTIFIER
    (44) type_specifier -> . array_type
    (45) type_specifier -> . generic_type
    (46) array_type -> . type_specifier OPEN_BRACKET CLOSE_BRACKET
    (47) generic_type -> . LIST LESS_THAN type_specifier GREATER_THAN
    (48) generic_type -> . DICTIONARY LESS_THAN type_specifier COMMA type_specifier GREATER_THAN

  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for INTERNAL resolved as shift
  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for FLOAT_TYPE resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for BOOL_TYPE resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for LIST resolved as shift
  ! shift/reduce conflict for DICTIONARY resolved as shift
    CLOSE_BRACE     reduce using rule 143 (empty -> .)
    STATIC          shift and go to state 34
    PUBLIC          shift and go to state 11
    PRIVATE         shift and go to state 12
    PROTECTED       shift and go to state 13
    INTERNAL        shift and go to state 14
    INT_TYPE        shift and go to state 35
    FLOAT_TYPE      shift and go to state 36
    DOUBLE          shift and go to state 37
    STRING_TYPE     shift and go to state 38
    BOOL_TYPE       shift and go to state 39
    CHAR            shift and go to state 40
    VOID            shift and go to state 41
    IDENTIFIER      shift and go to state 25
    LIST            shift and go to state 44
    DICTIONARY      shift and go to state 45
